# rusty-journal

./: Cargo.toml  Makefile  README.md
src/: cli.rs  main.rs  tasks.rs
