[package]
name = "rusty-journal"
version = "0.1.0"
authors = ["JADSN <poker1894@outlook.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.40"
chrono = { version = "0.4.19", features = ["serde"] }
home = "0.5.3"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
structopt = "0.3.21"
